# dx-controls

./: Cargo.toml  Dioxus.toml  build.rs  design.css  tailwind.css
.zed/: settings.json
assets/: bundle.css  tailwind.css
crates/dx-css-build/: Cargo.toml
crates/dx-css-build/src/: bundle.rs  cmd.rs  error.rs  lib.rs  main.rs  tailwind.rs
crates/dx-gradient/: Cargo.toml  build.rs  tailwind.css
crates/dx-gradient/src/: edit.rs  lib.rs  stop_value.rs
crates/dx-gradient/src/stop_value/: color.rs  duration.rs  f32.rs  usize.rs  xy.rs
crates/dx-graph/: Cargo.toml
crates/dx-graph/benches/: update.rs
crates/dx-graph/src/: force.rs  lib.rs  svg.rs
crates/dx-markdown/: Cargo.toml  markdown.css
crates/dx-markdown/src/: elements.rs  lib.rs
crates/dx-markdown/src/elements/: code.rs  emphasis.rs  heading.rs  inline_code.rs  link.rs  list.rs  paragraph.rs  root.rs  strong.rs  text.rs
crates/dx-primitives/: Cargo.toml  build.rs  tailwind.css
crates/dx-primitives/src/: button.rs  either_selector.rs  font_face.rs  input.rs  lib.rs  ribbon_selector.rs
crates/dx-primitives/src/input/: color.rs  duration.rs  xy.rs
crates/dx-web-animate/: Cargo.toml
crates/dx-web-animate/src/: lib.rs
src/: gradient.rs  main.rs  primitives.rs  stops.rs
src/stops/: edit.rs
