[package]
name = "dx-controls"
version.workspace = true
edition.workspace = true

[workspace]
members = [
  ".",
  "crates/dx-css-build",
  "crates/dx-gradient",
  "crates/dx-primitives"
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
dx-css-build = { path = "./crates/dx-css-build/" }
dx-gradient = { path = "./crates/dx-gradient/" }
dx-primitives = { path = "./crates/dx-primitives/" }

bevy_color = { version = "0.18" }
bon = { version = "3.9" }
cargo-manifest = { version = "0.20" }
derive_more = { version = "2.1" }
derive-new = { version = "0.7" }
dioxus = { version = "0.7" }
dioxus-free-icons = { version = "0.10", features = ["feather"] }
either = { version = "1.15" }
glam = { version = "0.32" }
itertools = { version = "0.14" }
lightningcss = { version = "1.0.0-alpha.71", default-features = false }
rand = { version = "0.10" }
serde = { version = "1.0" }
strum = { version = "0.28" }
thiserror = { version = "2.0" }
which = { version = "8.0" }

[dependencies]
bevy_color = { workspace = true }
derive-new = { workspace = true }
dioxus = { workspace = true, features = [] }
dx-gradient = { workspace = true }
dx-primitives = { workspace = true }
either = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }

[build-dependencies]
dx-css-build = { workspace = true }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
