[package]
name = "dx-css-build"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "dx-css-build-cli"
path = "src/main.rs"

[dependencies]
cargo-manifest = { workspace = true }
derive-new = { workspace = true }
lightningcss = { workspace = true, features = ["bundler", "serde"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
which = { workspace = true }

[features]
default = ["debug"]
debug = []
