[package]
name = "dx-gradient"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_color = { workspace = true }
# derive_more = { workspace = true, features = ["full"] }
derive-new = { workspace = true }
dioxus = { workspace = true, features = [] }
glam = { workspace = true }
itertools = { workspace = true }
