[package]
name = "dx-graph"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bench]]
harness = false
name = "update"

[dependencies]
dx-web-animate = { workspace = true, optional = true }

derive_more = { workspace = true, features = ["deref", "from", "into"] }
derive-new = { workspace = true }
dioxus = { workspace = true, optional = true }
petgraph = { workspace = true }
rand = { workspace = true }
spacial = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["cargo_bench_support", "csv_output"] }
petgraph = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[features]
default = ["ui"]
ui = ["dep:dioxus", "dep:dx-web-animate"]
