[package]
name = "dx-primitives"
version.workspace = true
edition.workspace = true
links = "dx_primitives_css"

[dependencies]
bevy_color = { workspace = true }
bon = { workspace = true }
derive_more = { workspace = true, features = ["deref"] }
derive-new = { workspace = true }
dioxus = { workspace = true, features = [] }
dioxus-free-icons = { workspace = true }
either = { workspace = true }
num-traits = { workspace = true }
spacial = { workspace = true }
strum = { workspace = true, features = ["derive"] }

[build-dependencies]
dx-css-build = { workspace = true }
